--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@playwright/test": "^1.51.0",
     "@types/node": "^22.13.10",
     "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-playwright": "^2.2.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
+    "prettier": "3.5.3",
     "typescript-eslint": "^8.28.0"
   }
 }
